--- a/index.html
+++ b/index.html
@@ -225,7 +225,23 @@
     </main>
     <!-- Main Section  End-->
      <!-- Footer Section Start -->
-
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo1">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h3 class="title">Hero <span class="title-color">Travel</span></h3>
+            </div>
+            <p class="des" style="margin-bottom: 20px;">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+            <div class="footer-logo2">
+                <img src="Images/Tweter.png" alt="">
+                <img src="Images/facebook.png" alt="">
+                <img src="Images/instragram.png" alt="">
+                <img src="Images/cat.png" alt="">
+                <hr>
+                <h4>2017, All Right Reserved</h4>
+            </div>
+        </div>
+    </footer>
      <!-- Footer Section End -->
 
 </body>
